# bincode-ext

./: .travis.yml  Cargo.toml  README.md
src/: byte_order.rs  lib.rs  slice.rs  test.rs
