[package]

name = "bincode_ext"
version = "0.0.4"
authors = ["Cody P Schafer <dev@codyps.com>"]
repository = "https://github.com/jmesmon/bincode-ext"
license = "MIT"
keywords = ["binary", "endian", "encode", "decode"]
description = "Types & functions to extend the functionality of bincode."

[dev-dependencies]
bincode = "*"

[dependencies]
rustc-serialize = "*"
